--- a/settings.gradle
+++ b/settings.gradle
@@ -1,16 +1,5 @@
 pluginManagement {
-    repositories {
-        //mavenLocal()
-        //maven { url '...' }
-        gradlePluginPortal()
+    repositories{
+    maven { url "https://artifactory.apps.bancolombia.com:443/maven-bancolombia/" }
     }
 }
-
-rootProject.name = 'NameProject'
-
-include ':app-service'
-include ':model'
-include ':usecase'
-project(':app-service').projectDir = file('./applications/app-service')
-project(':model').projectDir = file('./domain/model')
-project(':usecase').projectDir = file('./domain/usecase')
